--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -65,6 +65,8 @@ import com.android.build.OutputFile
  * ]
  */
 
+ apply from: "../../node_modules/react-native-vector-icons/fonts.gradle"
+
 apply from: "../../node_modules/react-native/react.gradle"
 
 /**
