--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "react": "15.4.1",
     "react-native": "0.39.2",
     "react-native-button": "^1.7.1",
+    "react-native-calendar": "^0.10.0",
     "react-native-router-flux": "^3.37.0",
     "react-native-vector-icons": "^3.0.0"
   },
