--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "react-native-button": "^1.7.1",
     "react-native-navbar": "^1.6.0",
     "react-native-router-flux": "^3.37.0",
+    "react-native-textinput-effects": "^0.3.0",
     "react-native-vector-icons": "^3.0.0"
   },
   "devDependencies": {
