--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "react-native": "0.39.2",
     "react-native-button": "^1.7.1",
     "react-native-router-flux": "^3.37.0",
+    "react-native-scrollable-tab-view": "^0.7.0",
     "react-native-vector-icons": "^3.0.0"
   },
   "devDependencies": {
