--- a/package.json
+++ b/package.json
@@ -7,10 +7,12 @@
     "test": "jest"
   },
   "dependencies": {
+    "apsl-react-native-button": "^3.0.2",
     "fbjs": "^0.8.8",
     "react": "15.4.1",
     "react-native": "0.39.2",
     "react-native-button": "^1.7.1",
+    "react-native-modalbox": "^1.3.8",
     "react-native-router-flux": "^3.37.0",
     "react-native-scrollable-tab-view": "^0.7.0",
     "react-native-vector-icons": "^3.0.0"
