Add Realm database + add User Schema and fake data when loading login page

--- a/package.json
+++ b/package.json
@@ -11,11 +11,13 @@
     "react": "15.4.1",
     "react-native": "0.39.2",
     "react-native-button": "^1.7.1",
+    "react-native-card-view": "0.0.3",
     "react-native-day-picker": "^1.1.6",
     "react-native-navbar": "^1.6.0",
     "react-native-router-flux": "^3.37.0",
     "react-native-textinput-effects": "^0.3.0",
-    "react-native-vector-icons": "^3.0.0"
+    "react-native-vector-icons": "^3.0.0",
+    "realm": "^0.15.0"
   },
   "devDependencies": {
     "babel-jest": "18.0.0",
