--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
     "react-native-vector-icons": "^3.0.0",
     "realm": "^0.15.0",
     "react-native-modalbox": "^1.3.8",
-    "react-native-scrollable-tab-view": "^0.7.0",
+    "react-native-scrollable-tab-view": "^0.7.0"
   },
   "devDependencies": {
     "babel-jest": "18.0.0",
