--- a/package.json
+++ b/package.json
@@ -12,16 +12,17 @@
     "react": "15.4.1",
     "react-native": "0.39.2",
     "react-native-button": "^1.7.1",
+    "react-native-calendar": "^0.10.0",
     "react-native-card-view": "0.0.3",
     "react-native-day-picker": "^1.1.6",
+    "react-native-gifted-chat": "0.0.10",
+    "react-native-modalbox": "^1.3.8",
     "react-native-navbar": "^1.6.0",
-    "react-native-calendar": "^0.10.0",
     "react-native-router-flux": "^3.37.0",
+    "react-native-scrollable-tab-view": "^0.7.0",
     "react-native-textinput-effects": "^0.3.0",
     "react-native-vector-icons": "^3.0.0",
-    "realm": "^0.15.0",
-    "react-native-modalbox": "^1.3.8",
-    "react-native-scrollable-tab-view": "^0.7.0"
+    "realm": "^0.15.0"
   },
   "devDependencies": {
     "babel-jest": "18.0.0",
