--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react-native-card-view": "0.0.3",
     "react-native-carousel": "^0.10.0",
     "react-native-day-picker": "^1.1.6",
+    "react-native-image-crop-picker": "^0.11.2",
     "react-native-looped-carousel": "^0.1.4",
     "react-native-modalbox": "^1.3.8",
     "react-native-navbar": "^1.6.0",
